--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
   test:
     runs-on: ubuntu-latest
     container:
-      image: junaidbhura/wp-tests:1
+      image: junaidbhura/wp-tests:php-7.3
     services:
       mysql:
         image: mysql:5.7.27
