--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
 name: Coding Standards and Tests
 
-on: [push]
+on: [ push ]
 
 env:
   WP_TESTS_DIR: /github/home/wp-tests/wordpress-tests-lib
@@ -10,8 +10,12 @@ jobs:
 
   test:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        php-version: [ 5.6, 7.3, 7.4 ]
+        wordpress-version: [ latest ]
     container:
-      image: junaidbhura/wp-tests:php-7.3
+      image: junaidbhura/wp-tests:php-${{ matrix.php-version }}
     services:
       mysql:
         image: mysql:5.7.27
@@ -45,7 +49,7 @@ jobs:
 
     - name: Install WordPress test suite
       run: |
-        bash bin/install-wp-tests.sh wordpress_test root root mysql latest
+        bash bin/install-wp-tests.sh wordpress_test root root mysql ${{ matrix.wordpress-version }}
 
     - name: Coding standards
       run: $HOME/.composer/vendor/bin/phpcs phpcs.ruleset.xml
