Reduce PHPUnit version to support PHP 5.6

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,7 +43,7 @@ jobs:
     - name: Install Composer dependencies
       if: steps.composer-cache.outputs.cache-hit != 'true'
       run: |
-        composer global require "phpunit/phpunit=6.1.0"
+        composer global require "phpunit/phpunit=5.7.*"
         composer global require wp-coding-standards/wpcs
         $HOME/.composer/vendor/bin/phpcs --config-set installed_paths $HOME/.composer/vendor/wp-coding-standards/wpcs
 
