Better GitHub action cache

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,14 +31,14 @@ jobs:
       uses: actions/cache@v1
       with:
         path: /github/home/.composer/vendor
-        key: composer-${{ hashFiles( '.github/workflows/main.yml' ) }}
+        key: composer-${{ hashFiles( '.github/workflows/main.yml' ) }}-${{ matrix.php-version }}
 
     - name: WordPress test suite cache
       id: wp-test-suite
       uses: actions/cache@v1
       with:
         path: /github/home/wp-tests
-        key: wp-tests-${{ hashFiles( '.github/workflows/main.yml' ) }}
+        key: wp-tests-${{ hashFiles( '.github/workflows/main.yml' ) }}-${{ matrix.wordpress-version }}
 
     - name: Install Composer dependencies
       if: steps.composer-cache.outputs.cache-hit != 'true'
